[gd_scene load_steps=10 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://img/GutGamehome_v2.png" type="Texture" id=2]
[ext_resource path="res://img/jogar.png" type="Texture" id=3]
[ext_resource path="res://img/jogar_2.png" type="Texture" id=4]
[ext_resource path="res://img/sobre.png" type="Texture" id=5]
[ext_resource path="res://img/sobre_2.png" type="Texture" id=6]
[ext_resource path="res://img/sair.png" type="Texture" id=7]
[ext_resource path="res://img/sair_2.png" type="Texture" id=8]
[ext_resource path="res://img/som.png" type="Texture" id=9]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -4.6499
margin_top = -0.300049
margin_right = 1415.35
margin_bottom = 782.7
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="jogar" type="TextureButton" parent="."]
margin_left = 766.653
margin_top = 370.202
margin_right = 1224.65
margin_bottom = 481.202
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
stretch_mode = 1

[node name="sobr" type="TextureButton" parent="."]
margin_left = 752.3
margin_top = 498.85
margin_right = 1275.3
margin_bottom = 633.85
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
stretch_mode = 1

[node name="sair" type="TextureButton" parent="."]
margin_left = 745.5
margin_top = 624.9
margin_right = 1203.5
margin_bottom = 718.9
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
stretch_mode = 1

[node name="som" type="TextureButton" parent="."]
margin_left = 1268.55
margin_top = 45.7
margin_right = 1368.55
margin_bottom = 145.7
texture_normal = ExtResource( 9 )
stretch_mode = 2
[connection signal="pressed" from="jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="sobr" to="." method="_on_sobr_pressed"]
[connection signal="pressed" from="sair" to="." method="_on_sair_pressed"]
